--- a/praw.ini
+++ b/praw.ini
@@ -26,8 +26,8 @@ short_url=https://redd.it
 timeout=16
 
 [LadleBot]
-client_id=xxx
-client_secret=xxx
-password=xxx
-user_agent=LadlingRedditv0.01
-username=theLadled
+client_id=
+client_secret=
+password=
+user_agent=
+username=
