--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ blinker==1.7.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
+colorama==0.4.6
+DateTime==5.5
 Flask==3.0.2
 idna==3.6
 itsdangerous==2.1.2
@@ -9,8 +11,11 @@ Jinja2==3.1.3
 MarkupSafe==2.1.5
 praw==7.7.1
 prawcore==2.4.0
+pytz==2024.1
 requests==2.31.0
+setuptools==69.2.0
 update-checker==0.18.0
 urllib3==2.2.1
 websocket-client==1.7.0
 Werkzeug==3.0.1
+zope.interface==6.2
