Accidentally put in my info

--- a/praw.ini
+++ b/praw.ini
@@ -26,8 +26,8 @@ short_url=https://redd.it
 timeout=16
 
 [LadleBot]
-client_id=pC8a0yZ_m1b9jxYTZwaF9g
-client_secret=yEhDZs14Hy32ZTtPgkFfBEsLXH9oHQ
-password=78abc123
-user_agent=ladleBotv0.1.0
-username=theLadled
+client_id=
+client_secret=
+password=
+user_agent=
+username=
