--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,15 @@ blinker==1.8.2
 certifi==2024.7.4
 charset-normalizer==3.3.2
 click==8.1.7
-datetime==5.5
-flask==3.0.3
+DateTime==5.5
+Flask==3.0.3
+git-filter-repo==2.38.0
 idna==3.7
 itsdangerous==2.2.0
-jinja2==3.1.4
-markupsafe==2.1.5
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+nh3==0.2.18
+numpy==1.26.4
 praw==7.7.1
 prawcore==2.4.0
 python-dotenv==1.0.1
@@ -16,6 +19,7 @@ requests==2.32.3
 setuptools==70.2.0
 update-checker==0.18.0
 urllib3==2.2.2
+uv==0.2.23
 websocket-client==1.8.0
-werkzeug==3.0.3
-zope-interface==6.4.post2
+Werkzeug==3.0.3
+zope.interface==6.4.post2
